--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "geist": "^1.4.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.512.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
