--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "express": "^5.1.0",
     "geist": "^1.4.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.512.0",
