--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "bcryptjs": "^3.0.2",
     "geist": "^1.4.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.512.0",
+    "mongodb": "^6.17.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
