--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "geist": "^1.4.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.512.0",
+    "mongodb": "^6.17.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
